--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,30 @@ body,
 }
 
 /* TODO: Exercice 3 - Ajouter des styles spécifiques au mode sombre */
+
+.bg-dark .card{
+  background-color: transparent !important;
+  color: #f5f5f5 !important ;
+  border: 1px solid #444 !important ;
+}
+
+.bg-dark .input-group > *{
+  background: transparent !important;
+  color: #f5f5f5;
+  border: 1px solid #444 !important;  
+}
+
+.input-dark::placeholder {
+  color: #f5f5f5 !important;  
+}
+.text-light {
+  color: #f5f5f5 !important;
+}
+
+.bg-light {
+  background-color: #ffffff !important;
+}
+
+.text-dark {
+  color: #000000 !important;
+}
